--- a/content/HOWTO.ipynb
+++ b/content/HOWTO.ipynb
@@ -7,15 +7,44 @@
    "source": [
     "# HOWTO\n",
     "\n",
-    "This document describes the intended use of the [Jupyter](https://jupyter.org/) notebooks (we will also call them <em>workbooks</em>) that we will be using during the exercises. The notebooks are powered by a JupyterLab distribution called [JupyterLite](https://jupyterlite.readthedocs.io/en/latest/) that runs <b>directly in the browser</b>. This means you don't have to install anything on your computer to complete the exercises. \n",
+    "This document describes the intended use of the [Jupyter](https://jupyter.org/) notebooks (we will also call them <em>workbooks</em>) that we will be using during the exercises. The notebooks are powered by a JupyterLab distribution called [JupyterLite](https://jupyterlite.readthedocs.io/en/latest/) that runs <b>directly in the browser</b>. This (in theory) means you don't have to install anything on your computer to complete the exercises. \n",
     "\n",
-    "You can of course download the notebooks to run locally, but then you yourself have to make sure you have all the necessary dependencies installed. You can install dependencies from the [requirements.txt](https://github.com/NBISweden/pgip-jlite/blob/main/requirements.txt) with, e.g., pip:\n",
+    "## Local installation\n",
+    "\n",
+    "You can of course download the notebooks to run locally, but then you yourself have to make sure you have all the necessary dependencies installed. You can download the notebooks individually from https://github.com/NBISweden/pgip-jlite/tree/main/content or by cloning the repo with [git](https://git-scm.com/):\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/NBISweden/pgip-jlite.git\n",
+    "cd pgip-jlite\n",
+    "```\n",
+    "\n",
+    "You can install dependencies from the [requirements.txt](https://github.com/NBISweden/pgip-jlite/blob/main/requirements.txt) with pip:\n",
     "\n",
     "```bash\n",
     "pip install -r requirements.txt\n",
     "```\n",
     "\n",
-    "The source code is located at https://github.com/NBISweden/pgip-jlite."
+    "You could also first create an isolated analysis environment with [miniconda](https://docs.conda.io/projects/miniconda/en/latest/#quick-command-line-install):\n",
+    "\n",
+    "```bash\n",
+    "conda create -n pgip-jlite python\n",
+    "conda activate pgip-jlite\n",
+    "pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "and fire up the workbooks with \n",
+    "\n",
+    "```bash\n",
+    "jupyter-notebook\n",
+    "```\n",
+    "\n",
+    "The source code is located at https://github.com/NBISweden/pgip-jlite.\n",
+    "\n",
+    "### Troubleshooting \n",
+    "\n",
+    "#### Mac OSX\n",
+    "\n",
+    "If you have problems installing msprime with pip, try a [conda installation](https://tskit.dev/msprime/docs/stable/installation.html#full-example). Also jupyter can be installed via conda."
    ]
   },
   {
@@ -58,7 +87,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>What to do if execution is slow</b>\n",
     "<br/>\n",
-    "From time to time, users have experienced long waiting times when executing code blocks. There is no clear-cut solution to this, other than patience, or if nothing seems to happen, reloading the notebook and restarting the kernel.\n",
+    "From time to time, users have experienced long waiting times when executing code blocks, and other weird behaviour, which may be browser-related. It is therefore recommended you run the exercises in the  <a href=\"https://www.google.com/chrome/\">Google chrome</a> browser for best performance.\n",
     "</div>"
    ]
   },
