--- a/content/coalescent.ipynb
+++ b/content/coalescent.ipynb
@@ -359,12 +359,7 @@
     "# Reproducibility\n",
     "random.seed(25)\n",
     "# Fill in the 6 branch lengths (one emanating from each node)\n",
-    "branches = np.array([1.973281,\n",
-    "                    0.29183,\n",
-    "                    0.24089925735290718,\n",
-    "                    0.24089925735290718,\n",
-    "                    0.05093078096309298,\n",
-    "                    1.68145067038478]) \n",
+    "branches = np.array([]) \n",
     "# Calculate T_total (the sum of all branches)\n",
     "T_total = np.sum(branches)\n",
     "# Calculate theta that gives S=5 by using the expression for S above\n",
@@ -646,6 +641,7 @@
     "# Exercise 4\n",
     "# Rename / complete where necessary. Hint: see the code where\n",
     "# you manually added mutations in the previous section\n",
+    "# Rename function and add parameters branches and theta\n",
     "def functionname():\n",
     "    branches = np.array(branches)\n",
     "    # Calculate T_total by summing up the branch lengths\n",
@@ -658,6 +654,17 @@
     "    mutations = scipy.stats.multinomial(n=S, p=p).rvs().flatten()\n",
     "    # return the mutations\n",
     "    # return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ea77e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simulate mutations for a set of branches and a given theta\n",
+    "mutations = sim_mutations(branches, theta=)"
    ]
   },
   {
@@ -675,6 +682,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_ancestry(ancestors, branches, mutations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9778a5",
+   "metadata": {},
+   "source": [
+    "Here's an example using the code from the `coal` module:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c61a02c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ancestors, branches = coal.sim_ancestry(10)\n",
+    "mutations = coal.sim_mutations(branches, theta=5)\n",
     "plot_ancestry(ancestors, branches, mutations)"
    ]
   },
