--- a/content/coalescent.ipynb
+++ b/content/coalescent.ipynb
@@ -432,7 +432,7 @@
    "source": [
     "# Coded coalescent\n",
     "\n",
-    "In this section, we will code the coalescent using python. Briefly, we need to transfer the manual steps from above into code. You will be asked to write two functions building on existing code snippets. And don't worry if python is not your language of choice, there are prepared functions that you can use as is. I still urge you to think through what code would be needed, and of course, don't hesitate to ask your teachers!"
+    "In this section, we will code the coalescent using Python. Briefly, we need to transfer the manual steps from above into code. You will be asked to write two functions building on existing code snippets. And don't worry if Python is not your language of choice, there are prepared functions that you can use as is. I still urge you to think through what code would be needed, and of course, don't hesitate to ask your teachers!"
    ]
   },
   {
@@ -579,7 +579,7 @@
     "))\n",
     "```   \n",
     "\n",
-    "Here, <tt>kwargs</tt> is a <a href=\"https://docs.python.org/3/tutorial/datastructures.html#dictionaries\">python dictionary</a> that holds the options to <tt>plot_ancestry</tt>. Set <tt>ymax</tt> to scale all trees to the same reference coordinates.\n",
+    "Here, <tt>kwargs</tt> is a <a href=\"https://docs.python.org/3/tutorial/datastructures.html#dictionaries\">Python dictionary</a> that holds the options to <tt>plot_ancestry</tt>. Set <tt>ymax</tt> to scale all trees to the same reference coordinates.\n",
     "    \n",
     "</div>"
    ]
