--- a/content/simulation_with_msprime.ipynb
+++ b/content/simulation_with_msprime.ipynb
@@ -214,7 +214,7 @@
    "id": "fd01f403",
    "metadata": {},
    "source": [
-    "You can find all properties and functions defined on `ts` by using the python builtin `dir`:"
+    "You can find all properties and functions defined on `ts` by using the Python builtin `dir`:"
    ]
   },
   {
@@ -800,7 +800,7 @@
    "id": "0a38c373",
    "metadata": {},
    "source": [
-    "Now that we have defined the demographic model, we can simulate the ancestry on top of this model by passing the `demography` option. In addition, we specify the number of samples *by population* by passing a python [dictionary](https://docs.python.org/3/tutorial/datastructures.html#dictionaries); briefly, this is a \"key\":value mapping enclosed in curly brackets."
+    "Now that we have defined the demographic model, we can simulate the ancestry on top of this model by passing the `demography` option. In addition, we specify the number of samples *by population* by passing a Python [dictionary](https://docs.python.org/3/tutorial/datastructures.html#dictionaries); briefly, this is a \"key\":value mapping enclosed in curly brackets."
    ]
   },
   {
@@ -946,7 +946,7 @@
    "id": "6ec738eb",
    "metadata": {},
    "source": [
-    "Do these numbers make sense? Let's compare the results with the simulations performed by the authors using SLiM. You can download the windowed statistics from the original publication like so:"
+    "Do these numbers make sense? Let's compare the results with the simulations performed by the authors who, as you may recall, used SLiM for their simulations. You can download the windowed statistics from the original publication like so:"
    ]
   },
   {
@@ -982,7 +982,8 @@
    },
    "outputs": [],
    "source": [
-    "df = data[data.label.str.startswith(\"Neutral\")]"
+    "df = data[data.label.str.startswith(\"Neutral\")]\n",
+    "df"
    ]
   },
   {
@@ -1032,7 +1033,7 @@
    "id": "4c5a774b",
    "metadata": {},
    "source": [
-    "We see that the results are mostly similar to those that we obtained, which is reassuring, as msprime and SLiM should not differ under the neutral model. However, the exception is $F_{ST}$. This has to do with how msprime and SLiM calculate $F_{ST}$. msprime uses the expression $F_{ST} = 1 - (\\pi_0 + \\pi_1)/(\\pi_0 + 2d_{XY} + \\pi_1)$, whereas SLiM (seems to) uses the expression $F_{ST} = 1 - \\frac{(\\pi_0 + \\pi_1)/2}{d_{XY}}$. Let's check these expressions below.\n"
+    "We see that the results are mostly similar to those that we obtained, which is reassuring, as msprime and SLiM should not differ under the neutral model. However, the exception is $F_{ST}$. This has to do with how msprime and SLiM calculate $F_{ST}$. msprime uses the expression $F_{ST} = 1 - 2(\\pi_0 + \\pi_1)/(\\pi_0 + 2d_{XY} + \\pi_1)$, whereas SLiM (seems to) uses the expression $F_{ST} = 1 - \\frac{(\\pi_0 + \\pi_1)/2}{d_{XY}}$. Let's check these expressions below.\n"
    ]
   },
   {
