Clarify some code

--- a/content/coalescent.ipynb
+++ b/content/coalescent.ipynb
@@ -515,7 +515,7 @@
     "    while i > 1:\n",
     "        lmbda = i*(i-1)/2\n",
     "        t = scipy.stats.expon(scale=1/lmbda).rvs()\n",
-    "        # update current_time\n",
+    "        # update current_time (interpretation: time units into the past)\n",
     "        current_time = \n",
     "        # Generate a parent node index\n",
     "        parent = max(uncoalesced) + 1\n",
@@ -530,7 +530,7 @@
     "        # Add the ancestor of child1 and child2\n",
     "        uncoalesced.append(parent)\n",
     "        i = i - 1\n",
-    "    # Calculate branch lengths from node j as the age of the parent \n",
+    "    # Calculate branch lengths from node j as the age of the parent minus the age of the child\n",
     "    for j in nodes[0:len(ancestors)]:\n",
     "        branches[j] = age[ancestors[j]] - age[j]\n",
     "    return ancestors, branches"
